--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ if(BUILD_DOCUMENTATION)
   set(doxyfile ${CMAKE_BINARY_DIR}/MinVR.doxygen)
   configure_file(${doxyfile_in} ${doxyfile} @ONLY)
 
-  add_custom_target(doc ALL
+  add_custom_target(doc
     COMMAND ${DOXYGEN_EXECUTABLE} ${doxyfile}
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
     COMMENT "Generating API documentation with Doxygen"
