fixed VRSearchPath to have INSTALLPATH inserted at cmake-time

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,33 +1,33 @@
 # ================================================================================
-# 
+#
 # This file is part of the MinVR project.
-# 
+#
 # File: CMakeLists.txt
-# 
+#
 # Original Author(s) of this File:
 # 	MinVR Core Team
-# 
+#
 # Author(s) of Significant Updates/Modifications to the File:
 # 	...
-# 
+#
 # -----------------------------------------------------------------------------------
 # Copyright (c) 2015 Regents of the University of Minnesota and Brown University
 # All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without modification,
 # are permitted provided that the following conditions are met:
-# 
+#
 # * Redistributions of source code must retain the above copyright notice, this
 #   list of conditions and the following disclaimer.
-# 
+#
 # * Redistributions in binary form must reproduce the above copyright notice, this
 #   list of conditions and the following disclaimer in the documentation and/or
 #   other materials provided with the distribution.
-# 
+#
 # * The name of the University of Minnesota, nor the names of its
 #   contributors may be used to endorse or promote products derived from
 #   this software without specific prior written permission.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 # ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 # WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
@@ -38,7 +38,7 @@
 # ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-# ================================================================================ 
+# ================================================================================
 
 
 project(libMinVR)
@@ -158,6 +158,16 @@ set(vr_main_cpp
   ${vr_src_dir}/main/VRSystem.cpp
 )
 
+## This is executed at cmake-time, and is done in order to sneak the
+## MinVR install directory literal into the VRSearchPath header file.
+## This does mess up the out-of-source build protocol, since the
+## VRSearchPath.h header file is not really source any more, but it
+## seems worth it.
+set(CMAKE_NO_EDIT_WARNING "WARNING -- THIS IS A GENERATED FILE -- DO NOT EDIT")
+configure_file(
+  ${CMAKE_CURRENT_SOURCE_DIR}/main/VRSearchPath.hpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/main/VRSearchPath.h)
+
 set(vr_main_h
   ${vr_src_dir}/main/VRAppLauncher.h
   ${vr_src_dir}/main/VREventHandler.h
@@ -170,6 +180,7 @@ set(vr_main_h
   ${vr_src_dir}/main/VRMain.h
   ${vr_src_dir}/main/VRMainInterface.h
   ${vr_src_dir}/main/VRRenderHandler.h
+  ${vr_src_dir}/main/VRSearchPath.h
   ${vr_src_dir}/main/VRSystem.h
 )
 
