--- a/tests-batch/CMakeLists.txt
+++ b/tests-batch/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(config)
 add_subdirectory(main)
+add_subdirectory(net)
 #add_subdirectory(eventdata)
 #add_subdirectory(eventhandler)
 #add_subdirectory(plugin)
