--- a/tests-interactive/CMakeLists.txt
+++ b/tests-interactive/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(config-viewer)
 add_subdirectory(opengl-fixedfuncpipeline)
 add_subdirectory(opengl-shaderpipeline)
+add_subdirectory(opengl-shaderpipeline-with-api)
 add_subdirectory(opengl-multithreaded)
 #add_subdirectory(pythonbindings-opengl)
