--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,7 +56,7 @@ set(vr_config_files
   ${vr_src_dir}/../config/ivlabcave.minvr
   ${vr_src_dir}/../config/ivlabcavefront.minvr
   ${vr_src_dir}/../config/ivlabcave-desktop.minvr
-  ${vr_src_dir}/../config/YURT_config.minvr
+  ${vr_src_dir}/../config/YURT.minvr
 )
 
 
