--- a/plugins/FREEGLUT/CMakeLists.txt
+++ b/plugins/FREEGLUT/CMakeLists.txt
@@ -16,6 +16,10 @@ source_group("Header Files" FILES ${HEADERFILES})
 #set_property(TARGET FreeGLUT PROPERTY FOLDER "Dependencies")
 SET(CMAKE_MODULE_PATH  ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH} )
 find_package(FreeGLUT REQUIRED)
+
+message(STATUS "FreeGLUT libraries: " ${FREEGLUT_LIBRARIES})
+message(STATUS "FreeGLUT includes:  " ${FREEGLUT_INCLUDE_DIRS})
+
 include_directories(${FREEGLUT_INCLUDE_DIR})
 
 # OpenGL
@@ -43,39 +47,9 @@ include_directories (
 )
 
 #------------------------------------------
-# Specific preprocessor defines
+# Output Directories
 #------------------------------------------
 
-# Windows Section #
-if (MSVC)
-    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-    # Tell MSVC to use main instead of WinMain for Windows subsystem executables
-    set_target_properties(${WINDOWS_BINARIES} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
-endif()
-
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
-	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
-	find_library(COCOA_LIB Cocoa)
-	find_library(IOKIT_LIB IOKit)
-	find_library(CORE_FOUNDATION_FRAMEWORK CoreFoundation)
-    	find_library(CORE_VIDEO_FRAMEWORK CoreVideo)
-	set(LIBS_ALL ${LIBS_ALL} ${COCOA_LIB} ${IOKIT_LIB} ${CORE_FOUNDATION_FRAMEWORK} ${CORE_VIDEO_FRAMEWORK})
-	message(STATUS "${CORE_VIDEO_FRAMEWORK}")
-endif()
-
-if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	find_package(Threads)
-	find_package(X11)
-	set(LIBS_ALL ${LIBS_ALL} ${CMAKE_THREAD_LIBS_INIT} rt Xrandr Xxf86vm Xi m dl ${X11_LIBRARIES})
-endif()
-
-#------------------------------------------
-# Set output directories to lib, and bin
-#------------------------------------------
-
-make_directory(${CMAKE_BINARY_DIR}/lib)
-make_directory(${CMAKE_BINARY_DIR}/bin)
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
@@ -86,23 +60,6 @@ foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
 	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 endforeach(CONF CMAKE_CONFIGURATION_TYPES)
 
-set(CMAKE_DEBUG_POSTFIX "d")
-set(CMAKE_RELEASE_POSTFIX "")
-set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")
-set(CMAKE_MINSIZEREL_POSTFIX "s")
-
-#set the build postfix extension according to the current configuration
-if (CMAKE_BUILD_TYPE MATCHES "Release")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_RELEASE_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "MinSizeRel")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_MINSIZEREL_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_RELWITHDEBINFO_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "Debug")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-else()
-	set(CMAKE_BUILD_POSTFIX "")
-endif()
 
 #------------------------------------------
 # Build Target
