moved external projects to install directory / ext

--- a/plugins/GLFW/CMakeLists.txt
+++ b/plugins/GLFW/CMakeLists.txt
@@ -29,7 +29,9 @@ set(glfw_stamp_dir ${glfw_build_dir}/stamp)
 set(glfw_tmp_dir ${glfw_build_dir}/tmp)
 
 set(glfw_PREFIX "${glfw_checkout_Dir}")
-set(glfw_INSTALL_DIR "${glfw_build_dir}/install")
+
+make_directory(${CMAKE_INSTALL_PREFIX}/ext/glfw)
+set(glfw_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/ext/glfw)
 
 set(glfw_CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${glfw_INSTALL_DIR} -DUSE_MSVC_RUNTIME_LIBRARY_DLL=ON -DGLFW_BUILD_DOCS=OFF -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
 set(glfw_DIR "${glfw_INSTALL_DIR}")
@@ -113,8 +115,6 @@ endif()
 # Set output directories to lib, and bin
 #------------------------------------------
 
-make_directory(${CMAKE_BINARY_DIR}/lib)
-make_directory(${CMAKE_BINARY_DIR}/bin)
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/bin)
@@ -125,25 +125,6 @@ foreach (CONF ${CMAKE_CONFIGURATION_TYPES})
 	set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONF} ${CMAKE_BINARY_DIR}/plugins/${PROJECT_NAME}/lib)
 endforeach(CONF CMAKE_CONFIGURATION_TYPES)
 
-if(NOT CMAKE_DEBUG_POSTFIX)
-  set(CMAKE_DEBUG_POSTFIX "d")
-endif()
-set(CMAKE_RELEASE_POSTFIX "")
-set(CMAKE_RELWITHDEBINFO_POSTFIX "rd")
-set(CMAKE_MINSIZEREL_POSTFIX "s")
-
-#set the build postfix extension according to the current configuration
-if (CMAKE_BUILD_TYPE MATCHES "Release")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_RELEASE_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "MinSizeRel")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_MINSIZEREL_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "RelWithDebInfo")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_RELWITHDEBINFO_POSTFIX}")
-elseif (CMAKE_BUILD_TYPE MATCHES "Debug")
-	set(CMAKE_BUILD_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-else()
-	set(CMAKE_BUILD_POSTFIX "")
-endif()
 
 #------------------------------------------
 # Build Target
