re-added a fake tracker device that works well for hand-held trackers rather than head trackers.  fixed a bug in graphics state where the view and proj matrices were getting garbled.  however, this fix uses a copy.  tom's new pointer accessor for the dataindex might be able to be used to avoid the copy, but i don't think those changes are in this branch yet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,10 +129,12 @@ set(vr_display_h
 )
 
 set(vr_input_cpp
+  ${vr_src_dir}/input/VRFakeHandTrackerDevice.cpp
   ${vr_src_dir}/input/VRFakeTrackerDevice.cpp
 )
 
 set(vr_input_h
+  ${vr_src_dir}/input/VRFakeHandTrackerDevice.h
   ${vr_src_dir}/input/VRFakeTrackerDevice.h
   ${vr_src_dir}/input/VRInputDevice.h
 )
